kubernetes/apps/apartment/kubevirt/truenas-scale/config/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: truenas-http
  annotations:
    io.cilium/lb-ipam-ips: 10.38.55.50
    lbipam.cilium.io/sharing-key: truenas
spec:
  selector:
    kubevirt.io/domain: truenas-scale
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: truenas-ssh
  annotations:
    io.cilium/lb-ipam-ips: 10.38.55.50
    lbipam.cilium.io/sharing-key: truenas
spec:
  selector:
    kubevirt.io/domain: truenas-scale
  ports:
    - protocol: TCP
      port: 22
      targetPort: 22
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: truenas-nfs
  annotations:
    io.cilium/lb-ipam-ips: 10.38.55.50
    lbipam.cilium.io/sharing-key: truenas
spec:
  selector:
    kubevirt.io/domain: truenas-scale
  ports:
    - name: nfs-tcp
      protocol: TCP
      port: 2049
      targetPort: 2049
    - name: nfs-udp
      protocol: UDP
      port: 2049
      targetPort: 2049
    - name: rpcbind-tcp
      protocol: TCP
      port: 111
      targetPort: 111
    - name: rpcbind-udp
      protocol: UDP
      port: 111
      targetPort: 111
  type: LoadBalancer
