kubernetes/apps/apartment/kubevirt/truenas-scale/config/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: truenas-webui
spec:
  parentRefs:
    - name: internal
      kind: Gateway
      namespace: cilium
      sectionName: https
  hostnames:
    - truenas.${SECRET_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: truenas-http
          port: 80
