kubernetes/apps/apartment/kubevirt/truenas-scale/config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: truenas-webui
spec:
  ingressClassName: internal
  rules:
    - host: truenas.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: truenas-http
                port:
                  number: 80
